Update team name

--- a/data/pan-task-eval-out/leaderboard.html
+++ b/data/pan-task-eval-out/leaderboard.html
@@ -173,7 +173,7 @@
     <tr>
       <th>11</th>
       <td>11</td>
-      <td>Sai Teja</td>
+      <td>Teja</td>
       <td>tomato-conduction</td>
       <td>0.897</td>
       <td>0.881</td>
